--- a/test.ipynb
+++ b/test.ipynb
@@ -1,37 +1,253 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    ""
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "initial_id",
+      "metadata": {
+        "collapsed": true,
+        "id": "initial_id",
+        "outputId": "6011fe99-aef2-42d8-b20b-b2ecac3e716a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'ResidualAttentionNetwork-pytorch'...\n",
+            "remote: Enumerating objects: 195, done.\u001b[K\n",
+            "remote: Counting objects: 100% (21/21), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (14/14), done.\u001b[K\n",
+            "remote: Total 195 (delta 8), reused 13 (delta 7), pack-reused 174 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (195/195), 142.61 MiB | 16.69 MiB/s, done.\n",
+            "Resolving deltas: 100% (72/72), done.\n",
+            "Updating files: 100% (9/9), done.\n"
+          ]
+        }
+      ],
+      "source": [
+        "!git clone https://github.com/WaShindeiru/ResidualAttentionNetwork-pytorch\n",
+        "!mv ResidualAttentionNetwork-pytorch temp"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from temp.model.residual_attention_network import ResidualAttentionModel_92_32input_update as ResidualAttentionModel"
+      ],
+      "metadata": {
+        "id": "Sk7KZ5Cx6uyu"
+      },
+      "id": "Sk7KZ5Cx6uyu",
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from __future__ import print_function, division\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torch.autograd import Variable\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "import numpy as np\n",
+        "import torchvision\n",
+        "from torchvision import transforms, datasets, models\n",
+        "import os\n",
+        "import cv2\n",
+        "import time\n",
+        "# from model.residual_attention_network_pre import ResidualAttentionModel\n",
+        "# based https://github.com/liudaizong/Residual-Attention-Network\n",
+        "from temp.model.residual_attention_network import ResidualAttentionModel_92_32input_update as ResidualAttentionModel\n",
+        "\n",
+        "model_file = './temp/model_92_sgd.pkl'\n",
+        "\n",
+        "\n",
+        "# for test\n",
+        "def test(model, test_loader, btrain=False, model_file='model_92.pkl'):\n",
+        "    # Test\n",
+        "    if not btrain:\n",
+        "        model.load_state_dict(torch.load(model_file))\n",
+        "    model.eval()\n",
+        "\n",
+        "    correct = 0\n",
+        "    total = 0\n",
+        "    #\n",
+        "    class_correct = list(0. for i in range(10))\n",
+        "    class_total = list(0. for i in range(10))\n",
+        "\n",
+        "    for images, labels in test_loader:\n",
+        "        images = Variable(images.cuda())\n",
+        "        labels = Variable(labels.cuda())\n",
+        "        outputs = model(images)\n",
+        "        _, predicted = torch.max(outputs.data, 1)\n",
+        "        total += labels.size(0)\n",
+        "        correct += (predicted == labels.data).sum()\n",
+        "        #\n",
+        "        c = (predicted == labels.data).squeeze()\n",
+        "        for i in range(20):\n",
+        "            label = labels.data[i]\n",
+        "            class_correct[label] += c[i]\n",
+        "            class_total[label] += 1\n",
+        "\n",
+        "    print('Accuracy of the model on the test images: %d %%' % (100 * float(correct) / total))\n",
+        "    print('Accuracy of the model on the test images:', float(correct)/total)\n",
+        "    for i in range(10):\n",
+        "        print('Accuracy of %5s : %2d %%' % (\n",
+        "            classes[i], 100 * class_correct[i] / class_total[i]))\n",
+        "    return correct / total\n",
+        "\n",
+        "\n",
+        "# Image Preprocessing\n",
+        "transform = transforms.Compose([\n",
+        "    transforms.RandomHorizontalFlip(),\n",
+        "    transforms.RandomCrop((32, 32), padding=4),   #left, top, right, bottom\n",
+        "    # transforms.Scale(224),\n",
+        "    transforms.ToTensor()\n",
+        "])\n",
+        "test_transform = transforms.Compose([\n",
+        "    transforms.ToTensor()\n",
+        "])\n",
+        "# when image is rgb, totensor do the division 255\n",
+        "# CIFAR-10 Dataset\n",
+        "train_dataset = datasets.CIFAR10(root='./data/',\n",
+        "                               train=True,\n",
+        "                               transform=transform,\n",
+        "                               download=True)\n",
+        "\n",
+        "test_dataset = datasets.CIFAR10(root='./data/',\n",
+        "                              train=False,\n",
+        "                              transform=test_transform)\n",
+        "\n",
+        "# Data Loader (Input Pipeline)\n",
+        "train_loader = torch.utils.data.DataLoader(dataset=train_dataset,\n",
+        "                                           batch_size=64, # 64\n",
+        "                                           shuffle=True, num_workers=8)\n",
+        "test_loader = torch.utils.data.DataLoader(dataset=test_dataset,\n",
+        "                                          batch_size=20,\n",
+        "                                          shuffle=False)\n",
+        "\n",
+        "classes = ('plane', 'car', 'bird', 'cat',\n",
+        "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')\n",
+        "model = ResidualAttentionModel().cuda()\n",
+        "print(model)\n",
+        "\n",
+        "lr = 0.1  # 0.1\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "optimizer = optim.SGD(model.parameters(), lr=lr, momentum=0.9, nesterov=True, weight_decay=0.0001)\n",
+        "is_train = True\n",
+        "is_pretrain = False\n",
+        "acc_best = 0\n",
+        "total_epoch = 300\n",
+        "if is_train is True:\n",
+        "    if is_pretrain == True:\n",
+        "        model.load_state_dict((torch.load(model_file)))\n",
+        "    # Training\n",
+        "    for epoch in range(total_epoch):\n",
+        "        model.train()\n",
+        "        tims = time.time()\n",
+        "        for i, (images, labels) in enumerate(train_loader):\n",
+        "            images = Variable(images.cuda())\n",
+        "            # print(images.data)\n",
+        "            labels = Variable(labels.cuda())\n",
+        "\n",
+        "            # Forward + Backward + Optimize\n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(images)\n",
+        "            loss = criterion(outputs, labels)\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "            # print(\"hello\")\n",
+        "            if (i+1) % 100 == 0:\n",
+        "                print(\"Epoch [%d/%d], Iter [%d/%d] Loss: %.4f\" %(epoch+1, total_epoch, i+1, len(train_loader), loss.data[0]))\n",
+        "        print('the epoch takes time:',time.time()-tims)\n",
+        "        print('evaluate test set:')\n",
+        "        acc = test(model, test_loader, btrain=True)\n",
+        "        if acc > acc_best:\n",
+        "            acc_best = acc\n",
+        "            print('current best acc,', acc_best)\n",
+        "            torch.save(model.state_dict(), model_file)\n",
+        "        # Decaying Learning Rate\n",
+        "        if (epoch+1) / float(total_epoch) == 0.3 or (epoch+1) / float(total_epoch) == 0.6 or (epoch+1) / float(total_epoch) == 0.9:\n",
+        "            lr /= 10\n",
+        "            print('reset learning rate to:', lr)\n",
+        "            for param_group in optimizer.param_groups:\n",
+        "                param_group['lr'] = lr\n",
+        "                print(param_group['lr'])\n",
+        "            # optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+        "            # optim.SGD(model.parameters(), lr=lr, momentum=0.9, nesterov=True, weight_decay=0.0001)\n",
+        "    # Save the Model\n",
+        "    torch.save(model.state_dict(), 'last_model_92_sgd.pkl')\n",
+        "\n",
+        "else:\n",
+        "    test(model, test_loader, btrain=False)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "zoBPNzTC6p7B",
+        "outputId": "50cdcff0-3caa-4a72-d252-e272d0d3c547",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
+      },
+      "id": "zoBPNzTC6p7B",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 170M/170M [00:06<00:00, 26.7MB/s]\n",
+            "/usr/local/lib/python3.11/dist-packages/torch/utils/data/dataloader.py:624: UserWarning: This DataLoader will create 8 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "empty() received an invalid combination of arguments - got (tuple, dtype=NoneType, device=NoneType), but expected one of:\n * (tuple of ints size, *, tuple of names names, torch.memory_format memory_format = None, torch.dtype dtype = None, torch.layout layout = None, torch.device device = None, bool pin_memory = False, bool requires_grad = False)\n * (tuple of ints size, *, torch.memory_format memory_format = None, Tensor out = None, torch.dtype dtype = None, torch.layout layout = None, torch.device device = None, bool pin_memory = False, bool requires_grad = False)\n",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-6bf7273b7073>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     84\u001b[0m classes = ('plane', 'car', 'bird', 'cat',\n\u001b[1;32m     85\u001b[0m            'deer', 'dog', 'frog', 'horse', 'ship', 'truck')\n\u001b[0;32m---> 86\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mResidualAttentionModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     87\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/content/temp/model/residual_attention_network.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    234\u001b[0m         )  # 32*32\n\u001b[1;32m    235\u001b[0m         \u001b[0;31m# self.mpool1 = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)  # 16*16\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 236\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresidual_block1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mResidualBlock\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 32*32\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    237\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattention_module1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAttentionModule_stage1_cifar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 32*32\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    238\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresidual_block2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mResidualBlock\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m256\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 16*16\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/content/temp/model/basic_layers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, input_channels, output_channels, stride)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbn1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBatchNorm2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_channels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mReLU\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconv1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mConv2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_channels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_channels\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbias\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbn2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBatchNorm2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_channels\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mReLU\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/nn/modules/conv.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, in_channels, out_channels, kernel_size, stride, padding, dilation, groups, bias, padding_mode, device, dtype)\u001b[0m\n\u001b[1;32m    519\u001b[0m         \u001b[0mpadding_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpadding\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpadding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0m_pair\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpadding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    520\u001b[0m         \u001b[0mdilation_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_pair\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdilation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 521\u001b[0;31m         super().__init__(\n\u001b[0m\u001b[1;32m    522\u001b[0m             \u001b[0min_channels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    523\u001b[0m             \u001b[0mout_channels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/nn/modules/conv.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, in_channels, out_channels, kernel_size, stride, padding, dilation, transposed, output_padding, groups, bias, padding_mode, device, dtype)\u001b[0m\n\u001b[1;32m    164\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m             self.weight = Parameter(\n\u001b[0;32m--> 166\u001b[0;31m                 torch.empty(\n\u001b[0m\u001b[1;32m    167\u001b[0m                     \u001b[0;34m(\u001b[0m\u001b[0mout_channels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0min_channels\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0mgroups\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0mkernel_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    168\u001b[0m                     \u001b[0;34m**\u001b[0m\u001b[0mfactory_kwargs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: empty() received an invalid combination of arguments - got (tuple, dtype=NoneType, device=NoneType), but expected one of:\n * (tuple of ints size, *, tuple of names names, torch.memory_format memory_format = None, torch.dtype dtype = None, torch.layout layout = None, torch.device device = None, bool pin_memory = False, bool requires_grad = False)\n * (tuple of ints size, *, torch.memory_format memory_format = None, Tensor out = None, torch.dtype dtype = None, torch.layout layout = None, torch.device device = None, bool pin_memory = False, bool requires_grad = False)\n"
+          ]
+        }
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 2
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython2",
+      "version": "2.7.6"
+    },
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "accelerator": "GPU"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
