--- a/VGG/train.ipynb
+++ b/VGG/train.ipynb
@@ -516,6 +516,84 @@
    "execution_count": null,
    "source": "show_images_with_labels_predicted(img.to('cpu'), label.to('cpu'), result.to('cpu'))",
    "id": "47de5251cb5cb0a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T11:42:24.819173Z",
+     "start_time": "2025-06-17T11:42:24.817369Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "now = datetime.now()\n",
+    "timestamp = now.strftime(\"%Y-%m-%d_%H:%M:%S\")"
+   ],
+   "id": "7b3016d400b0401f",
+   "outputs": [],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T11:45:00.730810Z",
+     "start_time": "2025-06-17T11:45:00.671538Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from pathlib import Path\n",
+    "name = \"VGG_attention\"+timestamp+\".pth\"\n",
+    "path_1 = \"./weights/\"\n",
+    "path_2 = path_1 + name\n",
+    "Path(path_1).mkdir(parents=True, exist_ok=True)\n",
+    "torch.save(model.state_dict(), path_2)"
+   ],
+   "id": "3569d3805a1dcc7e",
+   "outputs": [],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T11:47:11.496118Z",
+     "start_time": "2025-06-17T11:47:11.494224Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "path = \"./results/VGG_attention\"+timestamp\n",
+    "Path(path).mkdir(parents=True, exist_ok=True)"
+   ],
+   "id": "3976d1e3c578e5ec",
+   "outputs": [],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T11:47:17.957296Z",
+     "start_time": "2025-06-17T11:47:17.954403Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(path + \"/history.pickle\", 'wb') as f:\n",
+    "    pickle.dump(history, f)\n",
+    "\n",
+    "with open(path + \"/loss_history.pickle\", 'wb') as f:\n",
+    "    pickle.dump(loss_history, f)\n",
+    "\n",
+    "with open(path + \"/loss_history_test.pickle\", 'wb') as f:\n",
+    "    pickle.dump(loss_history_test, f)"
+   ],
+   "id": "9be78a29cd50f398",
+   "outputs": [],
+   "execution_count": 27
   }
  ],
  "metadata": {
