final commit? clueless

--- a/VisionTransformer/train.ipynb
+++ b/VisionTransformer/train.ipynb
@@ -222,6 +222,7 @@
     "\n",
     "    for images, labels in train_loop:\n",
     "        images, labels = images.to(device), labels.to(device)\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
     "\n",
     "        # 32, 3, 224, 224\n",
     "        outputs = model(images)\n",
